[package]
name = "capra-core-xtensa"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
description = "Diver compression library"
license = "MIT"
repository = "https://github.com/the-emerald/capra"
readme = "README.md"
edition = "2018"
keywords = ["scuba", "diving", "decompression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "^0.2.12", default-features = false }
thiserror = { version = "^1.0.20", optional = true }
serde = { version = "^1.0.114", optional = true}

[features]
default = ["std", "use-thiserror"]
use-thiserror = []
std = ["num-traits/default"]
use-serde = ["serde/derive"]