[package]
name = "capra-core-xtensa"
version = "0.1.0"
authors = ["Anson <git@anson-cheung.com>"]
description = "Diver compression library"
license = "MIT"
repository = "https://github.com/the-emerald/capra"
readme = "README.md"
edition = "2018"
keywords = ["scuba", "diving", "decompression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.114", optional = true}
libm = { git = "https://github.com/the-emerald/libm" }

[features]
default = []
use-serde = ["serde/derive"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"